--- a/assets/translations/ar-SA.json
+++ b/assets/translations/ar-SA.json
@@ -1,4 +1,5 @@
 {
+  "Sign up":"انشاء حساب",
   "no_route_found": "لا توجد شاشه",
   "on_boarding_title1": "شاهد افضل كورس #١",
   "on_boarding_title2": "شاهد افضل كورس #٢",
